--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.17",
+    "axios": "^1.6.0",
     "classnames": "^2.3.2",
     "normalize.css": "^8.0.1",
     "react": "^18.2.0",
