--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.17",
+    "@reduxjs/toolkit": "^2.0.1",
     "axios": "^1.6.0",
     "classnames": "^2.3.2",
     "framer-motion": "^10.16.4",
@@ -19,9 +20,11 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.48.2",
     "react-icons": "^4.11.0",
+    "react-redux": "^9.0.4",
     "react-router-dom": "^6.17.0",
     "sass": "^1.69.5",
-    "swiper": "^11.0.3"
+    "swiper": "^11.0.3",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
