--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@headlessui/react": "^1.7.17",
     "@reduxjs/toolkit": "^2.0.1",
+    "antd": "^5.12.8",
     "axios": "^1.6.0",
     "classnames": "^2.3.2",
     "framer-motion": "^10.16.4",
